# aperture-grpc-proto

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
proto/aperture/: txstream.proto
src/: lib.rs
